--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,7 +8,7 @@
   <body>
     <div
       id="root"
-      class="grid min-h-screen grid-rows-[auto_1fr] text-gray-800"
+      class="font-hashbnb grid min-h-screen grid-rows-[auto_1fr] text-gray-800"
     ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
